k8s/apps/whoami/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  annotations:
    fluentbit.io/exclude: "true"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: containous/whoami
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-hub-credentials
