k8s/apps/whoami/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`whoami.starry.blue`)
      services:
        - name: app
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-gateway

spec:
  routes:
    - kind: Rule
      match: Host(`whoami.gateway.starry.blue`)
      services:
        - name: app
          port: 80

  tls:
    options:
      name: gateway
      namespace: traefik
